add java security policy